Adding autogenerated Ceres config.h to #define Ceres compile options.
- Previously we passed all compile options to Ceres via add_definitions
  in CMake.  This was fine for private definitions (used only by Ceres)
  but required additional work for public definitions to ensure they
  were correctly propagated to clients via CMake using
  target_compile_definitions() (>= 2.8.11) or add_definitions().
- A drawback to these approaches is that they did not work for chained
  dependencies on Ceres, as in if in the users project B <- A <- Ceres,
  then although the required Ceres public compile definitions would
  be used when compiling A, they would not be propagated to B.

- This patch replaces the addition of compile definitions via
  add_definitions() with an autogenerated config.h header which
  is installed with Ceres and defines all of the enabled Ceres compile
  options.
- This removes the need for the user to propagate any compile
  definitions in their projects, and additionally allows post-install
  inspect of the options with which Ceres was compiled.

Change-Id: Idbdb6abdad0eb31e7540370e301afe87a07f2260

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,8 @@ MACRO(HANDLE_LEGACY_LIBRARY_DEPENDENCY_HINT
   ENDIF (DEFINED ${LEGACY_VAR})
 ENDMACRO(HANDLE_LEGACY_LIBRARY_DEPENDENCY_HINT)
 
+UNSET(CERES_COMPILE_OPTIONS)
+
 # Eigen.
 HANDLE_LEGACY_INCLUDE_DEPENDENCY_HINT(EIGEN_INCLUDE EIGEN_INCLUDE_DIR_HINTS)
 FIND_PACKAGE(Eigen REQUIRED)
@@ -207,11 +209,11 @@ IF (LAPACK)
     # when updating it to disable use of LAPACK.
     GET_PROPERTY(HELP_STRING CACHE LAPACK PROPERTY HELPSTRING)
     SET(LAPACK OFF CACHE BOOL "${HELP_STRING}" FORCE)
-    ADD_DEFINITIONS(-DCERES_NO_LAPACK)
+    LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_LAPACK)
   ENDIF (NOT (LAPACK_FOUND AND BLAS_FOUND))
 ELSE (LAPACK)
   MESSAGE("-- Building without LAPACK.")
-  ADD_DEFINITIONS(-DCERES_NO_LAPACK)
+  LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_LAPACK)
 ENDIF (LAPACK)
 
 # SuiteSparse.
@@ -262,11 +264,11 @@ IF (SUITESPARSE)
     # when updating it to disable use of SuiteSparse.
     GET_PROPERTY(HELP_STRING CACHE SUITESPARSE PROPERTY HELPSTRING)
     SET(SUITESPARSE OFF CACHE BOOL "${HELP_STRING}" FORCE)
-    ADD_DEFINITIONS(-DCERES_NO_SUITESPARSE)
+    LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_SUITESPARSE)
   ENDIF (SUITESPARSE_FOUND)
 ELSE (SUITESPARSE)
   MESSAGE("-- Building without SuiteSparse.")
-  ADD_DEFINITIONS(-DCERES_NO_SUITESPARSE)
+  LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_SUITESPARSE)
 ENDIF (SUITESPARSE)
 
 # CXSparse.
@@ -285,11 +287,11 @@ IF (CXSPARSE)
     # when updating it to disable use of CXSparse.
     GET_PROPERTY(HELP_STRING CACHE CXSPARSE PROPERTY HELPSTRING)
     SET(CXSPARSE OFF CACHE BOOL "${HELP_STRING}" FORCE)
-    ADD_DEFINITIONS(-DCERES_NO_CXSPARSE)
+    LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_CXSPARSE)
   ENDIF (CXSPARSE_FOUND)
 ELSE (CXSPARSE)
   MESSAGE("-- Building without CXSparse.")
-  ADD_DEFINITIONS(-DCERES_NO_CXSPARSE)
+  LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_CXSPARSE)
   # Mark as advanced (remove from default GUI view) the CXSparse search
   # variables in case user enabled CXSPARSE, FindCXSparse did not find it, so
   # made search variables visible in GUI for user to set, but then user disables
@@ -314,11 +316,9 @@ IF (GFLAGS)
     # when updating it to disable use of gflags.
     GET_PROPERTY(HELP_STRING CACHE GFLAGS PROPERTY HELPSTRING)
     SET(GFLAGS OFF CACHE BOOL "${HELP_STRING}" FORCE)
-    ADD_DEFINITIONS(-DCERES_NO_GFLAGS)
   ENDIF (GFLAGS_FOUND)
 ELSE (GFLAGS)
   MESSAGE("-- Google Flags disabled; no tests or tools will be built!")
-  ADD_DEFINITIONS(-DCERES_NO_GFLAGS)
   # Mark as advanced (remove from default GUI view) the gflags search
   # variables in case user enabled GFLAGS, FindGflags did not find it, so
   # made search variables visible in GUI for user to set, but then user disables
@@ -357,12 +357,12 @@ ELSE (MINIGLOG)
 ENDIF (MINIGLOG)
 
 IF (NOT SCHUR_SPECIALIZATIONS)
-  ADD_DEFINITIONS(-DCERES_RESTRICT_SCHUR_SPECIALIZATION)
+  LIST(APPEND CERES_COMPILE_OPTIONS CERES_RESTRICT_SCHUR_SPECIALIZATION)
   MESSAGE("-- Disabling Schur specializations (faster compiles)")
 ENDIF (NOT SCHUR_SPECIALIZATIONS)
 
 IF (NOT CUSTOM_BLAS)
-  ADD_DEFINITIONS(-DCERES_NO_CUSTOM_BLAS)
+  LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_CUSTOM_BLAS)
   MESSAGE("-- Disabling custom blas")
 ENDIF (NOT CUSTOM_BLAS)
 
@@ -374,20 +374,20 @@ IF (OPENMP)
     GET_PROPERTY(HELP_STRING CACHE OPENMP PROPERTY HELPSTRING)
     SET(OPENMP OFF CACHE BOOL "${HELP_STRING}" FORCE)
     MESSAGE("-- Compiler is Clang, disabling OpenMP.")
-    ADD_DEFINITIONS(-DCERES_NO_THREADS)
+    LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_THREADS)
   ELSE (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     # Find quietly s/t as we can continue without OpenMP if it is not found.
     FIND_PACKAGE(OpenMP QUIET)
     IF (OPENMP_FOUND)
       MESSAGE("-- Building with OpenMP.")
-      ADD_DEFINITIONS(-DCERES_USE_OPENMP)
+      LIST(APPEND CERES_COMPILE_OPTIONS CERES_USE_OPENMP)
       SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
       IF (UNIX)
         # At least on Linux, we need pthreads to be enabled for mutex to
         # compile.  This may not work on Windows or Android.
         FIND_PACKAGE(Threads REQUIRED)
-        ADD_DEFINITIONS(-DCERES_HAVE_PTHREAD)
-        ADD_DEFINITIONS(-DCERES_HAVE_RWLOCK)
+        LIST(APPEND CERES_COMPILE_OPTIONS CERES_HAVE_PTHREAD)
+        LIST(APPEND CERES_COMPILE_OPTIONS CERES_HAVE_RWLOCK)
       ENDIF (UNIX)
     ELSE (OPENMP_FOUND)
       MESSAGE("-- Failed to find OpenMP, disabling.")
@@ -395,12 +395,12 @@ IF (OPENMP)
       # when updating it to disable use of OPENMP.
       GET_PROPERTY(HELP_STRING CACHE OPENMP PROPERTY HELPSTRING)
       SET(OPENMP OFF CACHE BOOL "${HELP_STRING}" FORCE)
-      ADD_DEFINITIONS(-DCERES_NO_THREADS)
+      LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_THREADS)
     ENDIF (OPENMP_FOUND)
   ENDIF (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 ELSE (OPENMP)
   MESSAGE("-- Building without OpenMP (disabling multithreading).")
-  ADD_DEFINITIONS(-DCERES_NO_THREADS)
+  LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_THREADS)
 ENDIF (OPENMP)
 
 INCLUDE(CheckIncludeFileCXX)
@@ -420,7 +420,7 @@ IF (HAVE_STD_UNORDERED_MAP_HEADER)
                              }"
                             HAVE_UNORDERED_MAP_IN_STD_NAMESPACE)
   IF (HAVE_UNORDERED_MAP_IN_STD_NAMESPACE)
-    ADD_DEFINITIONS(-DCERES_STD_UNORDERED_MAP)
+    LIST(APPEND CERES_COMPILE_OPTIONS CERES_STD_UNORDERED_MAP)
     MESSAGE("-- Found unordered_map/set in std namespace.")
   ELSE (HAVE_UNORDERED_MAP_IN_STD_NAMESPACE)
     CHECK_CXX_SOURCE_COMPILES("#include <unordered_map>
@@ -430,24 +430,24 @@ IF (HAVE_STD_UNORDERED_MAP_HEADER)
                                }"
                               HAVE_UNORDERED_MAP_IN_TR1_NAMESPACE)
     IF (HAVE_UNORDERED_MAP_IN_TR1_NAMESPACE)
-      ADD_DEFINITIONS(-DCERES_STD_UNORDERED_MAP_IN_TR1_NAMESPACE)
+      LIST(APPEND CERES_COMPILE_OPTIONS CERES_STD_UNORDERED_MAP_IN_TR1_NAMESPACE)
       MESSAGE("-- Found unordered_map/set in std::tr1 namespace.")
     ELSE (HAVE_UNORDERED_MAP_IN_TR1_NAMESPACE)
       MESSAGE("-- Found <unordered_map> but cannot find either std::unordered_map "
               "or std::tr1::unordered_map.")
       MESSAGE("-- Replacing unordered_map/set with map/set (warning: slower!)")
-      ADD_DEFINITIONS(-DCERES_NO_UNORDERED_MAP)
+      LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_UNORDERED_MAP)
     ENDIF (HAVE_UNORDERED_MAP_IN_TR1_NAMESPACE)
   ENDIF (HAVE_UNORDERED_MAP_IN_STD_NAMESPACE)
 ELSE (HAVE_STD_UNORDERED_MAP_HEADER)
   CHECK_INCLUDE_FILE_CXX("tr1/unordered_map" HAVE_TR1_UNORDERED_MAP_HEADER)
   IF (HAVE_TR1_UNORDERED_MAP_HEADER)
-    ADD_DEFINITIONS(-DCERES_TR1_UNORDERED_MAP)
+    LIST(APPEND CERES_COMPILE_OPTIONS CERES_TR1_UNORDERED_MAP)
     MESSAGE("-- Found tr1/unordered_map/set in std::tr1 namespace.")
   ELSE (HAVE_TR1_UNORDERED_MAP_HEADE)
     MESSAGE("-- Unable to find <unordered_map> or <tr1/unordered_map>. ")
     MESSAGE("-- Replacing unordered_map/set with map/set (warning: slower!)")
-    ADD_DEFINITIONS(-DCERES_NO_UNORDERED_MAP)
+    LIST(APPEND CERES_COMPILE_OPTIONS CERES_NO_UNORDERED_MAP)
   ENDIF (HAVE_TR1_UNORDERED_MAP_HEADER)
 ENDIF (HAVE_STD_UNORDERED_MAP_HEADER)
 
@@ -455,10 +455,10 @@ INCLUDE(FindSharedPtr)
 FIND_SHARED_PTR()
 IF (SHARED_PTR_FOUND)
   IF (SHARED_PTR_TR1_MEMORY_HEADER)
-    ADD_DEFINITIONS(-DCERES_TR1_MEMORY_HEADER)
+    LIST(APPEND CERES_COMPILE_OPTIONS CERES_TR1_MEMORY_HEADER)
   ENDIF (SHARED_PTR_TR1_MEMORY_HEADER)
   IF (SHARED_PTR_TR1_NAMESPACE)
-    ADD_DEFINITIONS(-DCERES_TR1_SHARED_PTR)
+    LIST(APPEND CERES_COMPILE_OPTIONS CERES_TR1_SHARED_PTR)
   ENDIF (SHARED_PTR_TR1_NAMESPACE)
 ELSE (SHARED_PTR_FOUND)
   MESSAGE(FATAL_ERROR "Unable to find shared_ptr.")
@@ -485,7 +485,12 @@ ENDIF (GFLAGS)
 
 IF (BUILD_SHARED_LIBS)
   MESSAGE("-- Building Ceres as a shared library.")
+  # The CERES_BUILDING_SHARED_LIBRARY compile definition is NOT stored in
+  # CERES_COMPILE_OPTIONS as it must only be defined when Ceres is compiled
+  # not when it is used as it controls the CERES_EXPORT macro which provides
+  # dllimport/export support in MSVC.
   ADD_DEFINITIONS(-DCERES_BUILDING_SHARED_LIBRARY)
+  LIST(APPEND CERES_COMPILE_OPTIONS CERES_USING_SHARED_LIBRARY)
 ELSE (BUILD_SHARED_LIBS)
   MESSAGE("-- Building Ceres as a static library.")
 ENDIF (BUILD_SHARED_LIBS)
@@ -647,22 +652,12 @@ IF (APPLE AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     CLANG_VERSION VERSION_LESS 4.2)
 ENDIF (APPLE AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 
-# Get the complete list of any added compile definitions so that we can
-# export them.  Currently we export all Ceres compile definitions to users
-# of Ceres via FindPackage() except CERES_BUILDING_SHARED_LIBRARY (if present)
-# which controls the behaviour of the CERES_EXPORT macro for MSVC, which
-# we substitute for CERES_USING_SHARED_LIBRARY, which is what users of
-# Ceres should call in MSVC.
-GET_DIRECTORY_PROPERTY(CERES_INTERFACE_COMPILE_DEFINITIONS
-  DIRECTORY ${CMAKE_SOURCE_DIR} COMPILE_DEFINITIONS)
-# Substitute CERES_BUILDING_SHARED_LIBRARY with CERES_USING_SHARED_LIBRARY
-# if building Ceres as a shared library.
-IF (BUILD_SHARED_LIBS)
-  LIST(REMOVE_ITEM CERES_INTERFACE_COMPILE_DEFINITIONS
-    CERES_BUILDING_SHARED_LIBRARY)
-  LIST(APPEND CERES_INTERFACE_COMPILE_DEFINITIONS
-    CERES_USING_SHARED_LIBRARY)
-ENDIF()
+# Configure the Ceres config.h compile options header using the current
+# compile options and put the configured header into the Ceres source tree.
+LIST(REMOVE_DUPLICATES CERES_COMPILE_OPTIONS)
+INCLUDE(ConfigureCeresConfig)
+CONFIGURE_CERES_CONFIG("${CERES_COMPILE_OPTIONS}"
+  ${CMAKE_SOURCE_DIR}/include/ceres/internal)
 
 ADD_SUBDIRECTORY(internal/ceres)
 
